# mmm-os

./: .gitignore  Cargo.toml  LICENSE.txt  build.rs  deny.toml  run.sh
.github/workflows/: build.yml
src/: boot.s  exceptions.rs  gic.rs  interrupt.s  linker.ld  macros.inc  main.rs  sync.rs  uart.rs  utilities.rs
